--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.2.2</PackageVersion>
+    <PackageVersion>0.2.5</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
-    <Description>Ap公用类</Description>
+    <Description>Asp.Net Core MVC公用类</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
     <Copyright>psyduck007</Copyright>
     <NeutralLanguage>zh</NeutralLanguage>
-    <PackageLicenseExpression>LGPL</PackageLicenseExpression>
+    <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
     <Owners>psyduck007</Owners>
     <Summary>PsyDuckCommon for different project</Summary>
     <Title>PsyDuckCommon</Title>
