--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.2.5</PackageVersion>
+    <PackageVersion>0.2.8</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
     <Description>Asp.Net Core MVC公用类</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -19,6 +19,7 @@
     <Folder Include="Models\" />
     <Folder Include="Utils\" />
     <Folder Include="Common\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
     
   <ItemGroup>
