--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,15 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.2.8</PackageVersion>
+    <PackageVersion>0.2.10</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
-    <Description>Asp.Net Core MVC公用类</Description>
+    <Description>DotNetCore Common Utils/Models/Extensions/Objects</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
-    <Copyright>psyduck007</Copyright>
+    <Copyright>psyduck007@outlook.com</Copyright>
     <NeutralLanguage>zh</NeutralLanguage>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
-    <Owners>psyduck007</Owners>
+    <Owners>psyduck007@outlook.com</Owners>
     <Summary>PsyDuckCommon for different project</Summary>
+            <PackageProjectUrl>https://github.com/naughtyGitCat/PsyDuckCommon</PackageProjectUrl>
     <Title>PsyDuckCommon</Title>
   </PropertyGroup>
 
