--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.2.17</PackageVersion>
+    <PackageVersion>0.2.18</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
     <Description>DotNetCore Common Utils/Models/Extensions/Objects</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -21,6 +21,7 @@
     <Folder Include="Utils\" />
     <Folder Include="Common\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
     
   <ItemGroup>
