--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.2.18</PackageVersion>
+    <PackageVersion>0.3.1</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
     <Description>DotNetCore Common Utils/Models/Extensions/Objects</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -22,6 +22,7 @@
     <Folder Include="Common\" />
     <Folder Include="Extensions\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Settings\" />
   </ItemGroup>
     
   <ItemGroup>
