--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.3.1</PackageVersion>
+    <PackageVersion>0.3.2</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
     <Description>DotNetCore Common Utils/Models/Extensions/Objects</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -14,6 +14,7 @@
     <Summary>PsyDuckCommon for different project</Summary>
             <PackageProjectUrl>https://github.com/naughtyGitCat/PsyDuckCommon</PackageProjectUrl>
     <Title>PsyDuckCommon</Title>
+    <PackageReleaseNotes>add Application {HostInfo, ProjectInfo, ApplicationPort } POCO</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +27,6 @@
   </ItemGroup>
     
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9" />
   </ItemGroup>
 </Project>
