--- a/DBACommonPackage.csproj
+++ b/DBACommonPackage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>PsyDuckCommon</PackageId>
-    <PackageVersion>0.3.2</PackageVersion>
+    <PackageVersion>0.3.3.1</PackageVersion>
     <Authors>psyduck007@outlook.com</Authors>
     <Description>DotNetCore Common Utils/Models/Extensions/Objects</Description>
     <SynchReleaseVersion>false</SynchReleaseVersion>
@@ -17,6 +17,9 @@
     <PackageReleaseNotes>add Application {HostInfo, ProjectInfo, ApplicationPort } POCO</PackageReleaseNotes>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType></DebugType>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Utils\" />
